--- a/frontend/public/css/index.css
+++ b/frontend/public/css/index.css
@@ -78,14 +78,13 @@ circle {
   display: flex;
   gap: 20px;
   padding: 20px;
+  /* background-color: #f5f7fa; */
 }
 
 .course-card {
   background-color: #f8f9fa;
   border-radius: 10px;
   padding: 20px;
-  width: 100%;
-  height: 100%;
   text-align: center;
 }
 
